--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 		  </ol>
 		  <div class="carousel-inner">
 		    <div class="carousel-item active">
-		      <img src="images/c1.jpg" class="d-block w-100 img-fluid" alt="...">
+		      <img src="images/c1.jpg" class="d-block w-100 img-fluid responsive" alt="...">
 		    </div>
 		    <div class="carousel-item">
-		      <img src="images/c2.jpg" class="d-block w-100 img-fluid" alt="...">
+		      <img src="images/c2.jpg" class="d-block w-100 img-fluid responsive" alt="...">
 		    </div>
 		    <div class="carousel-item">
-		      <img src="images/c3.jpg" class="d-block w-100 img-fluid" alt="...">
+		      <img src="images/c3.jpg" class="d-block w-100 img-fluid responsive" alt="...">
 		    </div>
 		  </div>
 		  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -76,8 +76,38 @@
 		</div>
 
 		<!-- Content -->
-		<div class="container">
-			&nbsp;
+		<div class="container-fluid bg-light justify-content-start">
+			<div class="col-lg-12 home-card">
+				<h3> Find Your Finest Templates for your Resume here </h3>
+			</div>
+			<div class="col-lg-12">
+				<div class="row no-gutters">
+					<div class="col-lg-3 home-card">
+						<div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+							<img class="card-img-top" src="images/home1.png" alt="Card image cap">
+						</div>
+					</div>
+
+					<div class="col-lg-3 home-card">
+						<div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+							<img class="card-img-top" src="images/home2.png" alt="Card image cap">
+						</div>
+					</div>
+
+					<div class="col-lg-3 home-card">
+						<div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+							<img class="card-img-top" src="images/home3.png" alt="Card image cap">
+						</div>
+					</div>
+
+					<div class="col-lg-3 home-card">
+						<div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem;">
+							<img class="card-img-top" src="images/home4.png" alt="Card image cap">
+						</div>
+					</div>					
+
+				</div>
+			</div>
 		</div>
 		
 		<!-- Footer -->
