--- a/recents.html
+++ b/recents.html
@@ -51,37 +51,25 @@
 			<h1> Recent Creations </h1><br>
 			<div class="row">
 				<div class="col-md-6">
-					<div class="card text-white mb-3 bg-dark" style="max-width: 540px;">
-						<div class="row no-gutters">
-							<div class="col-md-4">
-							  <img class="card-img" src="images/card1.jpg" alt="Card image" style="height:100%">
-							</div>
-							<div class="col-md-8">
-								<div class="card-body">
-									<h4 class="card-title">Robert Drowny Jr.</h4>
-								    <p class="card-text">Secure a responsible career opportunity to fully utilize my training and skills, while making a significant contribution to the success of the company.</p>
-								    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-								    <a href="#" class="btn btn-primary">See Profile</a>
-								</div>
-							</div>
+					<div class="card" style="width: 25rem">
+					  	<img class="card-img-top" src="images/card1.jpg" alt="Card image cap" style="width:100%; height: 15vw; object-fit: cover;">
+					  	<div class="card-body">
+							<h4 class="card-title">Robert Drowny Jr.</h4>
+						    <p class="card-text">Secure a responsible career opportunity to fully utilize my training and skills, while making a significant contribution to the success of the company.</p>
+						    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+						    <a href="#" class="btn btn-primary">See Profile</a>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-md-6">
-					<div class="card text-white mb-3 bg-dark" style="max-width: 540px;">
-						<div class="row no-gutters">
-							<div class="col-md-4">
-							  <img class="card-img" src="images/card2.jpg" alt="Card image" style="height:100%">
-							</div>
-							<div class="col-md-8">
-								<div class="card-body">
-									<h4 class="card-title">Scarlett Johnson</h4>
-								    <p class="card-text">To make use of my interpersonal skills to achieve goals of a company that focuses on customer satisfaction and customer experience.</p>
-								    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-								    <a href="#" class="btn btn-primary">See Profile</a>
-								</div>
-							</div>
+					<div class="card" style="width: 25rem;">
+					  	<img class="card-img-top" src="images/card2.jpg" alt="Card image cap" style="width:100%; height: 15vw; object-fit: cover;">
+					  	<div class="card-body">
+							<h4 class="card-title">Scarlett Johnson</h4>
+						    <p class="card-text">To make use of my interpersonal skills to achieve goals of a company that focuses on customer satisfaction and customer experience.</p>
+						    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+						    <a href="#" class="btn btn-primary">See Profile</a>
 						</div>
 					</div>
 				</div>
